# session-cli

./: .gitignore  README.md  README_zh.md  main.py  pyproject.toml  server.py
.codebuddy/plans/: cookie-real-expiry-and-detail-sections_54d7cc16.md  domain-lookup-api_d36aa53b.md  fix-cookie-grab-and-auth-headers_cf33493c.md  modularize-and-fix-bugs_0289922b.md  navigate-to-full-url-store-by-domain_c15a8875.md  network-headers-and-cookie-header-storage_45d61ba9.md  persistent-mcp-and-refresh-button_702ca678.md  readme-and-requirements-docs_d9871d6d(未完成).md  subdomain-match-and-related-domains_4da67600.md  subdomain-matching-for-headers_4a75ba9b(未完成).md
.trae/documents/: fix-double-encoded-json-parsing_plan.md  fix-login-redirect-detection_plan.md  fix-raw-storage-tests_plan.md  html-style-optimization_plan.md  logging-and-browser-selection_plan.md  restore-common-headers-display_plan.md  store-original-url_plan.md
core/: __init__.py  mcp.py  mcp_manager.py  session.py  vault.py
requirements/: README.md  cli.md  core.md  server.md  technical.md  ui.md
templates/: index.html
tests/: conftest.py  test_mcp.py  test_mcp_manager.py  test_server.py  test_session.py  test_vault.py
