[project]
name = "session-cli"
version = "0.1.0"
description = "Automate browser session/cookie grabbing via Chrome DevTools MCP protocol with CLI and Web UI. Encrypted storage powered by Romek Vault."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "playwright>=1.61.0",
    "python-multipart>=0.0.32",
    "romek>=0.4.0",
    "urllib3>=2.7.0",
    "uvicorn>=0.50.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]
